# inVLC

./: CMakeLists.txt  README.md  application.cpp  application.h  application.js  htmlview.cpp  htmlview.h  main.cpp  media.cpp  media.h  medialist.cpp  medialist.h  medialistplayer.cpp  medialistplayer.h  player.cpp  player.h  vlcinstance.cpp  vlcinstance.h  webinterface.cpp  webinterface.h  webview.cpp
bridge/: htmlview.cpp  htmlview.h  networkaccessmanager.cpp  networkaccessmanager.h  networkreply.cpp  networkreply.h  page.cpp  page.h  router.cpp  router.h  webinterface.cpp  webinterface.h  webview.cpp  webview.h
cmake/: FindLIBVLC.cmake
core/: media.cpp  media.h  medialist.h  medialistplayer.cpp  medialistplayer.h  player.cpp  player.h  vlcinstance.cpp
html/: index.html
html/css/: style.css
html/js/: app.js
